k8s/site/site-ui.yml
---

apiVersion: v1
kind: Service
metadata:
  name: site-ui
  namespace: z-site
spec:
  type: LoadBalancer
  ports:
  - port: 3001
    name: z-site-ui
    targetPort: 3001
  selector:
    app: site-ui
---

apiVersion: v1
kind: Service
metadata:
  name: site-images
  namespace: z-site
spec:
  type: LoadBalancer
  ports:
  - port: 3002
    name: z-images-server
    targetPort: 3002
  selector:
    app: site-ui
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: site-ui
  name: site-ui
  namespace: z-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site-ui
  template:
    metadata:
      labels:
        app: site-ui
    spec:
      containers:
      - image: zemuldo/site-ui:latest
        name: site-ui
        ports:
          - name: site-ui
            containerPort: 3001
          - name: z-images-site
            containerPort: 3002
        volumeMounts:
          - name: z-site-images
            mountPath: /usr/src/app/public/z-site-images
      volumes:
        - name: z-site-images
          nfs:
            server: 209.97.137.61
            path: /mnt/z-site-images
---
